--- a/WPFTodoList/Dialogs/Views/ConfirmDialog.xaml
+++ b/WPFTodoList/Dialogs/Views/ConfirmDialog.xaml
@@ -14,20 +14,10 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         
-        <TextBlock Text="{ Binding Path=Message }"
-                   FontSize="16"
-                   TextWrapping="WrapWithOverflow"
-                   TextAlignment="Center"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
+        <TextBlock Text="{ Binding Path=Message }" FontSize="14" TextWrapping="WrapWithOverflow" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
-        <DockPanel Grid.Row="1"
-                   LastChildFill="False">
-            <Button DockPanel.Dock="Right"
-                    Content="Confirm"
-                    Padding="4"
-                    MinWidth="70"
-                    Command="{ Binding Path=ConfirmCommand }" />
+        <DockPanel Grid.Row="1" LastChildFill="False">
+            <Button DockPanel.Dock="Right" Content="Confirm" Padding="4" MinWidth="70" Command="{ Binding Path=ConfirmCommand }" />
         </DockPanel>
     </Grid>
 </UserControl>
