--- a/WPFTodoList/Dialogs/Views/EditTodoDialog.xaml
+++ b/WPFTodoList/Dialogs/Views/EditTodoDialog.xaml
@@ -7,7 +7,7 @@
              d:DesignHeight="450" 
              d:DesignWidth="800"
              Width="300"
-             Height="200">
+             Height="180">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -16,19 +16,12 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Vertical">
-            <Label Content="Todo:" />
-            <TextBox Margin="0, 2" 
-                     Padding="4"
-                     Text="{ Binding Todo.Title }" />
+            <Label Content="Todo:" FontWeight="Bold" />
+            <TextBox Text="{ Binding Todo.Title }" />
         </StackPanel>
 
-        <DockPanel Grid.Row="2"
-                   LastChildFill="False">
-            <Button DockPanel.Dock="Right"
-                    Content="Update"
-                    Padding="4"
-                    MinWidth="70"
-                    Command="{ Binding Path=UpdateCommand }" />
+        <DockPanel Grid.Row="2" LastChildFill="False">
+            <Button DockPanel.Dock="Right" Content="Update" Padding="4" MinWidth="70" Command="{ Binding Path=UpdateCommand }" />
         </DockPanel>
     </Grid>
 </UserControl>
